--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "formik": "^2.4.5",
     "framer-motion": "^6.3.16",
     "material-ui-popup-state": "^4.0.1",
+    "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
@@ -36,10 +37,11 @@
     "react-dom": "^18.2.0",
     "react-email-editor": "^1.7.9",
     "react-hook-form": "^7.49.2",
+    "react-loader-spinner": "^6.1.6",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^8.0.2",
     "react-router": "6.3.0",
-    "react-router-dom": "6.3.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.0",
