--- a/package.json
+++ b/package.json
@@ -5,24 +5,24 @@
   "homepage": "https://berrydashboard.io/",
   "dependencies": {
     "@emotion/cache": "^11.9.3",
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fullcalendar/core": "^6.1.10",
     "@fullcalendar/daygrid": "^6.1.10",
     "@fullcalendar/interaction": "^6.1.10",
     "@fullcalendar/react": "^6.1.10",
     "@fullcalendar/timegrid": "^6.1.10",
     "@iconify/react": "^4.1.1",
-    "@mui/icons-material": "^5.16.7",
+    "@mui/icons-material": "^5.16.11",
     "@mui/lab": "^5.0.0-alpha.88",
-    "@mui/material": "^5.16.7",
+    "@mui/material": "^5.16.11",
     "@mui/system": "^5.8.6",
     "@mui/utils": "^5.8.6",
     "@mui/x-data-grid": "^6.18.6",
     "@mui/x-date-pickers": "^7.22.2",
     "@tabler/icons": "^1.72.0",
     "apexcharts": "^3.35.3",
-    "axios": "^1.7.7",
+    "axios": "^1.7.9",
     "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "framer-motion": "^6.3.16",
@@ -45,6 +45,7 @@
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.0",
+    "xlsx": "^0.18.5",
     "yup": "^0.32.11"
   },
   "scripts": {
