--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "framer-motion": "^6.3.16",
+    "html2pdf.js": "^0.10.2",
     "material-ui-popup-state": "^4.0.1",
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
