--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/x-data-grid": "^6.18.6",
     "@mui/x-date-pickers": "^7.22.2",
     "@tabler/icons": "^1.72.0",
+    "@tabler/icons-react": "^3.28.1",
     "apexcharts": "^3.35.3",
     "axios": "^1.7.9",
     "dayjs": "^1.11.10",
